--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,10 +22,11 @@
 --loading-text-gradient: linear-gradient(90deg, transparent 0% 16.66%, var(--smoky-black-3) 33.33% 50%,  transparent 66.66% 75%);
 --gradient-1: linear-gradient(to top,hsla(0, 0%, 0%, 0.9),hsla(0, 0%, 0%, 0.7),transparent);
 
-/* Typography */
+/* font family */
 --fontFamily-forum: 'Forum', cursive;
 --fontFamily-dm_sans: 'DM Sans', sans-serif;
 
+/* Typography */
 --fontSize-display-1: calc(1.3rem + 6.7vw);
 --fontSize-headline-1: calc(2rem + 2.5vw);
 --fontSize-headline-2: calc(1.3rem + 2.4vw);
