--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,11 +22,18 @@
 --loading-text-gradient: linear-gradient(90deg, transparent 0% 16.66%, var(--smoky-black-3) 33.33% 50%,  transparent 66.66% 75%);
 --gradient-1: linear-gradient(to top,hsla(0, 0%, 0%, 0.9),hsla(0, 0%, 0%, 0.7),transparent);
 
+
+
+/* 
+    Typography     
+*/
+
+
 /* font family */
 --fontFamily-forum: 'Forum', cursive;
 --fontFamily-dm_sans: 'DM Sans', sans-serif;
 
-/* Typography */
+/* Font size */
 --fontSize-display-1: calc(1.3rem + 6.7vw);
 --fontSize-headline-1: calc(2rem + 2.5vw);
 --fontSize-headline-2: calc(1.3rem + 2.4vw);
@@ -41,9 +48,11 @@
 --fontSize-label-1: 1.4rem;
 --fontSize-label-2: 1.2rem;
 
+/* Font width */
 --weight-regular: 400;
 --weight-bold: 700;
 
+/* Line Height*/
 --lineHeight-1: 1em;
 --lineHeight-2: 1.2em;
 --lineHeight-3: 1.5em;
@@ -51,6 +60,7 @@
 --lineHeight-5: 1.85em;
 --lineHeight-6: 1.4em;
 
+/* LeterScaping */
 --letterSpacing-1: 0.15em;
 --letterSpacing-2: 0.4em;
 --letterSpacing-3: 0.2em;
