--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,4 +67,48 @@
 --letterSpacing-4: 0.3em;
 --letterSpacing-5: 3px;
 
+/* Spaching */
+--section-space: 70px;
+
+/* Shadow */
+--shadow-1: 0px 0px 25px 0px hsla(0, 0%, 0%, 0.25);
+
+/* Border Radious */
+--radius-24: 24px;
+--radius-circle: 50%;
+
+/* Transition */
+--transition-1: 250ms ease;
+--transition-2: 500ms ease;
+--transition-3: 1000ms ease;
+
 }
+
+*,
+*::before,
+*::after{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+li{
+    list-style: none;
+}
+
+
+a,
+img,
+data,
+span,
+input,
+button,
+select,
+ion-icon,
+
+
+
+
+
+
+
