--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,6 +130,29 @@ textarea{
     font: inherit;
 }
 
+input,
+select,
+textarea{
+    width: 100%;
+    outline: none;
+}
+
+button{
+    cursor: pointer;
+}
+
+address{
+    font-style: normal;
+}
+
+html{
+    font-size: 10px;
+    scroll-behavior: smooth;
+}
+
+body{
+    background-color: ;
+}
 
 
 
