--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,7 +151,13 @@ html{
 }
 
 body{
-    background-color: ;
+    background-color: var(--eerie-black-1);
+    color: var(--white);
+    font-family: var(--fontFamily-dm_sans);
+    font-size: var(--fontSize-body-4);
+    font-weight: var(--weight-regular);
+    line-height: var(--lineHeight-5);
+    overflow: hidden;
 }
 
 
