--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,7 +157,8 @@ body{
     font-size: var(--fontSize-body-4);
     font-weight: var(--weight-regular);
     line-height: var(--lineHeight-5);
-    overflow: hidden;
+    height: 300vh;
+    /* overflow: hidden; */
 }
 
 
@@ -168,6 +169,17 @@ body.loaded{
 body.nav-active{
     overflow: hidden;
 }
+
+
+::-webkit-scrollbar{
+    width: 5px;
+}
+
+::-webkit-scrollbar-track{
+    background-color: transparent;
+}
+
+
 
 
 
