css scrollbar update

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -179,7 +179,9 @@ body.nav-active{
     background-color: transparent;
 }
 
-
+::-webkit-scrollbar-thumb{
+    background-color: var(--gold-crayola);
+}
 
 
 
