preload css add

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,6 +184,15 @@ body.nav-active{
 }
 
 
+/* preload */
+.preload {
+    position: fixed;
+    top: 0;;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--gold-crayola);
+}
 
 
 
