--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,7 +212,15 @@ body.nav-active{
     transform: translate(100%);
 }
 
-
+.circle {
+   width: 112px;
+   height: 112px;
+   border-radius: var(--radius-circle); 
+   border: 3px solid var(--white);
+   border-block-start-color: var(--smoky-black-3);
+   margin-block-end: 45px; 
+   animation: rotate360 1s linear infinite; 
+}
 
 
 
