update circale 360 rotate css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,6 +222,11 @@ body.nav-active{
    animation: rotate360 1s linear infinite; 
 }
 
+@keyframes rotate360 {
+    0% {transform: rotate(0);}
+    100% {transform: rotate(1turn);}
+}
+
 
 
 
