preload text add css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,6 +227,19 @@ body.nav-active{
     100% {transform: rotate(1turn);}
 }
 
+.preload.text {
+    background-image: var(--loading-text-gradient);
+    background-size: 500%;
+    font-size: calc(2rem + 3vw);
+    font-weight: var(--weight-bold);
+    line-height: 1em;
+    text-transform: uppercase;
+    letter-spacing: 16px;
+    padding-inline-start: 16px;
+}
+
+
+
 
 
 
