loading text update

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -251,6 +251,10 @@ p.text {
     margin-top: 80%;
 }
 
+@keyframes loadingText {
+    0% {background-position: 100%;}
+    100% {background-position: 0%;}
+}
 
 
 
