--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -285,6 +285,55 @@ p.text {
     transition-delay: 250ms;
 }
 
+.header.container{
+    padding-inline: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 8px;
+}
+
+.nav-open-btn.line{
+    width: 30px;
+    height: 2px;
+    background-color: var(--white);
+    margin-block: 4px;
+    transform-origin: left;
+    animation: menuBtn 400ms ease-in-out alternate infinite;
+}
+
+@keyframes menuBtn{
+    0% {transform: scaleX(1);}
+    100%{transform: scaleX(0.5);}
+}
+
+.nav-open-btn.line-2{
+    animation-delay: 150ms;
+   
+}
+
+.nav-open-btn.line-3 {
+    animation-delay: 300ms;
+}
+
+.navbar{
+    position: fixed;
+    background-color: var(--smoky-black-1);
+    top: 0;
+    left: -360px;
+    bottom: 0;
+    max-width: 360px;
+    width: 100%;
+    padding-inline: 30px;
+    padding-inline-end: 50px;
+    overflow-y: auto;
+    visibility: hidden;
+    z-index: 2;
+    transition: var(--transition-2);
+}
+
+
+
 
 
 
