navbar logo css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -354,6 +354,12 @@ navbar.active{
     color: var(--gold-crayola);
 }
 
+.navbar.logo{
+    max-width: max-content;
+    margin-inline: auto;
+    margin-block-end: 100px;
+}
+
 
 
 
