contact number css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,6 +268,16 @@ p.text {
     transform: rotate(45deg);
 }
 
+.contact-lable{
+    font-weight: var(--weight-bold);
+}
+
+.contact-number{
+    color: var(--gold-crayola);
+    max-width: max-content;
+    margin-inline: auto;
+}
+
 
 
 
