--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -278,6 +278,21 @@ p.text {
     margin-inline: auto;
 }
 
+.hover-underline{
+    position: relative;
+    max-width: max-content;
+}
+
+.hover-underline::after{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 5px;
+    border-block: 1px solid var(--gold-crayola);
+}
+
 
 
 
