--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -291,6 +291,9 @@ p.text {
     width: 100%;
     height: 5px;
     border-block: 1px solid var(--gold-crayola);
+    transform: scaleX(0.2);
+    opacity: 0;
+    transition: var(--transition-2);
 }
 
 
