--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -389,7 +389,8 @@ p.text {
 }
 
 /* Header */
-.header.btn{
+.overlay,
+.header .btn{
     display: none;
 }
 
@@ -405,18 +406,18 @@ p.text {
     transition: var(--transition-1);
 }
 
-.header.active{
+.header .active{
     padding-block: 20px;
     background-color: var(--eerie-black-4);
     border-color: var(--black-alpha-15);
 }
 
-.header.hide{
+.header .hide{
     transform: translateY(-100%);
     transition-delay: 250ms;
 }
 
-.header.container{
+.header .container{
     padding-inline: 20px;
     display: flex;
     justify-content: space-between;
@@ -424,13 +425,22 @@ p.text {
     gap: 8px;
 }
 
-.nav-open-btn.line{
+.nav-open-btn{
+    padding: 12px;
+    padding-inline-end: 0;
+}
+
+.nav-open-btn .line{
     width: 30px;
     height: 2px;
     background-color: var(--white);
     margin-block: 4px;
     transform-origin: left;
     animation: menuBtn 400ms ease-in-out alternate infinite;
+
+    /* right: 10%;
+    top: 10%;  */
+    
 }
 
 @keyframes menuBtn{
@@ -438,16 +448,16 @@ p.text {
     100%{transform: scaleX(0.5);}
 }
 
-.nav-open-btn.line-2{
+.nav-open-btn .line-2{
     animation-delay: 150ms;
    
 }
 
-.nav-open-btn.line-3 {
+.nav-open-btn .line-3 {
     animation-delay: 300ms;
 }
 
-.navbar{
+.navbar {
     position: fixed;
     background-color: var(--smoky-black-1);
     top: 0;
@@ -463,12 +473,12 @@ p.text {
     transition: var(--transition-2);
 }
 
-navbar.active{
+.navbar.active {
     visibility: visible;
     transform: translateX(360px);
 }
 
-.navbar.close-btn{
+.navbar .close-btn{
     color: var(--white);
     border: 1px solid currentColor;
     padding: 4px;
@@ -477,30 +487,30 @@ navbar.active{
     margin-block: 30px 20px;
 }
 
-.navbar.close-btn ion-icon{
+.navbar .close-btn ion-icon{
     --ionicon-stroke-width: 40px;
 }
 
-.navbar.close-btn:is(:hover, :focus-visible){
+.navbar .close-btn:is(:hover, :focus-visible){
     color: var(--gold-crayola);
 }
 
-.navbar.logo{
+.navbar .logo {
     max-width: max-content;
     margin-inline: auto;
     margin-block-end: 100px;
 }
 
-.navbar-list{
+.navbar-list {
     border-block-end: 1px solid var(--white-alpha-20);
     margin-block-end: 100px;
 }
 
-.navbar-item{
+.navbar-item {
     border-block-start: 1px solid var(--white-alpha-20);
 }
 
-.navbar-link{
+.navbar-link {
     position: relative;
     font-size: var(--fontSize-label-2);
     text-transform: uppercase;
@@ -508,11 +518,11 @@ navbar.active{
     min-width: unset;
 }
 
-.navbar-link::after{
+.navbar-link::after {
     display: none;
 }
 
-.navbar-link.span{
+.navbar-link .span {
     transition: var(--transition-1);
 }
 
@@ -521,14 +531,14 @@ navbar.active{
     transform: translateX(20px);
 }
 
-.navbar-link.separator{
+.navbar-link .separator{
     position: absolute;
     top: 50%;
     left: 0;
     transform: translateY(-50%) rotate(45deg);
     opacity: 0;
     transition: var(--transition-1);
-} 
+}  
 
 
 
