js add event listner

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -388,8 +388,8 @@ p.text {
     display: none;
 }
 
+
 /* Header */
-.overlay,
 .header .btn{
     display: none;
 }
@@ -556,8 +556,44 @@ p.text {
     transition: var(--transition-1);
 }
 
+.sidebar-link:is(:hover, :focus-visible) {
+    color: var(--gold-crayola);
+}
 
+.navbar .body-4{
+    color: var(--quick-silver);
+}
 
+.navbar .text-center .separator {
+    margin-block: 30px;
+    margin-inline: auto;
+}
+
+.navbar .contact-lable {
+    margin-block-end: 10px;
+}
+
+.navbar::-webkit-scrollbar-thumb{
+    background-color: var(--white-alpha-10);
+} 
+
+.overlay {
+    position: relative;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: var(--black-alpha-80);
+    opacity: 0;
+    pointer-events: none;
+    transition: var(--transition-2);
+    z-index: l;
+}
+
+.overlay.active{
+    opacity: 1;
+    pointer-events: all;
+}
 
 
 
