--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -602,6 +602,30 @@ p.text {
     display: none;
 }
 
+.hero {
+    position: relative;
+    padding-block: 120px;
+    min-height: 100vh;
+    overflow: hidden;
+    z-index: 1;
+}
+
+.hero .slider-item {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    display: grid;
+    place-content: center;
+    padding-block-start: 100px;
+    opacity: 0;
+    visibility: hidden;
+    transform: var(--transition-3);
+    z-index: 1;
+}
+
 
 
 
