--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -382,6 +382,19 @@ p.text {
     text-align: center;
 }
 
+.img-cover {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.section-subtitle {
+    position: relative;
+    color: var(--gold-crayola);
+    font-weight: var(--weight-bold);
+    
+}
+
 
 /* topbar */
 .topbar{
