section-subtitle::after css update

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -397,6 +397,14 @@ p.text {
     margin-block-end: 12px;
 }
 
+.section-subtitle::after {
+    content: url('../image/separator.svg');
+    display: block;
+    width: 100px;
+    margin-inline: auto;
+    margin-block-start: 5px;
+}
+
 
 
 /* topbar */
