--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -405,6 +405,21 @@ p.text {
     margin-block-start: 5px;
 }
 
+.btn {
+    position: relative;
+    color: var(--gold-crayola);
+    font-size: var(--fontSize-label-2);
+    font-weight: var(--weight-bold);
+    text-transform: uppercase;
+    list-style: var(--letterSpacing-5);
+    max-width: max-content;
+    border: 2px solid var(--gold-crayola);
+    padding: 12px 45px;
+    overflow: hidden;
+    z-index: 1;
+}
+
+
 
 
 /* topbar */
