--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,3 +98,13 @@
     --transition-3: 1000ms ease;
   
   }
+
+
+  /* Reset */
+  *,
+  *::before,
+  *::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
