--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,3 +124,23 @@
   textarea {
     display: block;
   }
+
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
+
+  img {
+    height: auto;
+  }
+
+  input,
+  button,
+  select,
+  textarea {
+    background: none;
+    border: none;
+    font: inherit;
+  }
+
+  
