--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,3 +172,26 @@ body {
     line-height: var(--lineHeight-5);
     height: 300vh;
 }
+
+body .loaded {
+    overflow: overlay;
+}
+
+body .nav-active {
+    overflow: hidden;
+}
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track{
+    background-color: transparent;
+}
+
+::-webkit-slider-thumb {
+    background-color: var(--gold-crayola);
+}
+
+
+/* Typography */
