--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -237,3 +237,30 @@ body .nav-active {
 .title-4 {
     font-size: var(--fontSize-title-4);
 }
+
+.body-1 {
+    font-size: var(--fontSize-body-1);
+    line-height: var(--lineHeight-6);
+}
+
+.body-2 {
+    font-size: var(--fontSize-body-2);
+    line-height: var(--lineHeight-4);
+}
+
+.body-3 {
+    font-size: var(--fontSize-body-3);
+}
+
+.body-4 {
+    font-size: var(--fontSize-body-4);
+}
+
+.label-1 {
+    font-size: var(--fontSize-label-1);
+}
+
+.label-2 {
+    font-size: var(--fontSize-label-2);
+}
+
