add preload css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -269,3 +269,21 @@ body .nav-active {
 .container {
     padding-inline: 16px;
 }
+
+
+
+/* PERLOAD */
+
+.preload {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--gold-crayola);
+    z-index: 10;
+    display: grid;
+    place-content: center;
+    justify-items: center;
+    transition: var(--transition-2);
+}
