preload time add

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -287,3 +287,16 @@ body .nav-active {
     justify-items: center;
     transition: var(--transition-2);
 }
+
+.preload > * {
+    transition: var(--transition-1);
+}
+
+.preload.loaded > * {
+    opacity: 0;
+}
+
+.preload.loaded {
+    transition-delay: 500ms;
+    transform: translateY(100%);
+}
