--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -315,3 +315,24 @@ body .nav-active {
     0% {transform: rotate(0);}
     100% {transform: rotate(1turn);}
 }
+
+.preload .text{
+    background-image: var(--loading-text-gradient);
+    background-size: 500%;
+    font-size: calc(2rem, 3vw);
+    font-weight: var(--weight-bold);
+    line-height: 1em;
+    text-transform: uppercase;
+    letter-spacing: 16px;
+    padding-inline-start: 16px;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-stroke: 0.5px var(--eerie-black-3);
+    animation: loadingText initial 2s infinite;
+}
+
+@keyframes loadingText {
+    0% {background-position: 100%;}
+    100% {background-position: 0%;}
+}
