--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -369,6 +369,33 @@ body .nav-active {
     z-index: -1;
 }
 
+.btn .text {
+    transition: var(--transition-1);
+}
+
+.btn .text-2 {
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%);
+    min-width: max-content;
+    color: var(--smoky-black-1);
+}
+
+.btn:is(:hover, :focus-visible)::before {
+    bottom: -50%;
+
+}
+
+.btn:is(:hover, :focus-visible) .text-1 {
+    transform: translateY(-40px);
+}
+
+.btn:is(:hover, :focus-visible) .text-2 {
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
 
 /* PERLOAD */
 
