--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -437,7 +437,62 @@ body .nav-active {
     gap: 40px;
 }
 
+.hover\:shine {
+    position: relative;
+}
 
+.hover\:shine::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background-image: linear-gradient(to right, transparent 0%, #fff6 100%);
+    transform: skewX(-0.08turn) translateX(-180%);
+}
+
+.hover\:shine:is(:hover, :focus-within)::after {
+    transform: skewX(-0.08turn) translateX(275%);
+    transition: var(--transition-3);
+}
+
+.img-holder {
+    aspect-ratio: var(--width) / var(--heght);
+    overflow: hidden;
+    background-color: var(--eerie-black-4);
+}
+
+.btn-text {
+    color: var(--gold-crayola);
+    padding-block-end: 4px;
+    margin-inline: auto;
+    text-transform: uppercase;
+    letter-spacing: var(--letterSpacing-3);
+    font-weight: var(--weight-bold);
+    transition: var(--transition-1);
+}
+
+.btn-text:is(:hover, :focus-visible){
+    color: var(--white);
+}
+
+.shape {
+    display: none;
+    position: absolute;
+    max-width: max-content;
+    z-index: -1;
+}
+
+.w-100 {
+    width: 100%;
+}
+
+.move-anim {
+    animation: move 5s linear infinite;
+}
+
+/* methanin */
 
 
 /* PERLOAD */
