--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -533,7 +533,29 @@ body .nav-active {
     margin-block-end: 20px;
 }
 
+.icon-wrapper .input-filed {
+    margin-block-end: 0;
+    padding-inline-start: 40px;
+    appearance: none;
+    cursor: pointer;
+}
 
+.icon-wrapper ion-icon {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 1.4rem;
+    --ionicon-stroke-width: 50px;
+    pointer-events: none;
+}
+
+.icon-wrapper ion-icon:first-child {
+    left: 15px;
+}
+
+.icon-wrapper ion-icon:last-child{
+    right: 10px;
+}
 
 
 
@@ -598,6 +620,20 @@ body .nav-active {
 }
 
 @keyframes loadingText {
-    0% {background-position: 100%;}
-    100% {background-position: 0%;}
+    0% {
+        background-position: 100%;
+    }
+
+    100% {
+        background-position: 0%;
+    }
 }
+
+
+/* TopBar */
+
+.topbar {
+    display: none;
+}
+
+
