--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -655,13 +655,35 @@ body .nav-active {
     transition: var(--transition-1);
 }
 
-.header .active {
+.header.active {
     padding-block: 20px;
     background-color: var(--eerie-black-4);
     border-color: var(--black-alpha-15);
 }
 
-.header .hide {
+.header.hide {
     transform: translateY(-100%);
     transition-delay: 250ms;
+}
+
+.header .container {
+    padding-inline: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 8px;
+}
+
+.nav-open-btn {
+    padding: 12px;
+    padding-inline-end: 0;
+}
+
+.nav-open-btn .line {
+    width: 30px;
+    height: 2px;
+    background-color: var(--white);
+    margin-block: 4px;
+    transform-origin: left;
+    animation: menuBtn 400ms ease-in-out alternate infinite;
 }
