update navbar css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -780,5 +780,16 @@ body .nav-active {
     transform: translateX(20px);
 }
 
+.navbar-link .separator {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%) rotate(45deg);
+    opacity: 0;
+    transition: var(--transition-1);
+}
 
+.navbar-link:is(:hover, :focus-visible, .active) .separator {
+    opacity: 1;
+}
 
