update navbar css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -801,3 +801,40 @@ body .nav-active {
     margin-block: 10px;
 }
 
+.navbar .body-4 {
+    color: var(--quick-silver);
+}
+
+.sidebar-link {
+    transition: var(--transition-1);
+}
+
+.sidebar-link:is(:hover, :focus-visible) {
+    color: var(--gold-crayola);
+}
+
+.navbar .text-center .separator {
+    margin-block: 30px;
+    margin-inline: auto;
+}
+
+.navbar .contact-lable {
+    margin-block-end: 10px;
+}
+
+.navbar::-webkit-slider-thumb {
+    background-color: var(--white-alpha-10);
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: var(--black-alpha-80);
+    opacity: 0;
+    pointer-events: none;
+    transition: var(--transition-2);
+    z-index: 1;
+}
