--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -875,3 +875,20 @@ body .nav-active {
     z-index: 1;
 }
 
+.hero .slider-item.active {
+    opacity: 1;
+    visibility: visible;
+}
+
+.hero .slider-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: scale(1.15);
+    pointer-events: none;
+    user-select: none;
+    z-index: -1;
+}
+
