add smoothScale animation

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -892,3 +892,12 @@ body .nav-active {
     z-index: -1;
 }
 
+.hero .slider-item.active .slider-bg {
+    animation: smoothScale 7s linear forwards;
+}
+
+@keyframes smoothScale {
+    0% {transform: scale(1);}
+    100% {transform: scale(1.15);}
+}
+
