update hero css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -917,4 +917,24 @@ body .nav-active {
     position: absolute;
     bottom: 15px;
     right: 15px;
+    z-index: 2;
+    background-color: var(--gold-crayola);
+    width: 110px;
+    height: 110px;
+    padding: 12px;
+    transform: scale(0.6);
 }
+
+.hero-btn img {
+    margin-inline: auto;
+    margin-block-end: 6px;
+}
+
+.hero-btn .span {
+    color: var(--black);
+    font-weight: var(--weight-bold);
+    text-transform: uppercase;
+    letter-spacing: var(--letterSpacing-1);
+    line-height: var(--lineHeight-3);
+}
+
