hero css update

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -938,3 +938,37 @@ body .nav-active {
     line-height: var(--lineHeight-3);
 }
 
+.hero-btn::after {
+    inset: 0;
+    border: 1px solid var(--gold-crayola);
+    animation: rotate360 15s linear infinite;
+}
+
+.slider-reveal {
+    transform: translateY(30px);
+    opacity: 0;
+}
+
+.hero .slider-item.active .slider-reveal {
+    animation: sliderReveal 1s ease forwards;
+}
+
+@keyframes sliderReveal {
+    0% {transform: translateY(30px);
+    opacity: 0;
+    }
+
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+.hero .slider-item.active .section-subtitle {
+    animation-delay: 500ms;
+}
+
+.hero .slider-item.active .hero-title {
+    animation-delay: 1000ms;
+}
+
