--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -995,3 +995,23 @@ body .nav-active {
 
 /* Special Dish */
 
+.special-dish {
+    overflow: visible;
+    position: relative;
+}
+
+.special-dish .shape {
+    display: block;
+    right: 0;
+    z-index: 1;
+}
+
+.special-dish .shape-1 {
+    top: 45%;
+}
+
+.special-dish .shape-2 {
+    bottom: 0;
+    transform: translateY(50%);
+    width: max-content;
+}
