all don about css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -999,6 +999,22 @@ body .nav-active {
     padding-inline-end: 90px;
 }
 
+.special-dish .shape {
+    display: block;
+    right: 0;
+    z-index: 1;
+}
+
+.special-dish .shape-1 {
+    top: 45%;
+}
+
+.special-dish .shape-2 {
+    bottom: 0;
+    transform: translateY(50%);
+    width: max-content;
+}
+
 
 /* Special Dish */
 
